--- a/src/partials/PORTAL/3_actualizacion/2_contacto.html
+++ b/src/partials/PORTAL/3_actualizacion/2_contacto.html
@@ -217,7 +217,7 @@
       <div class="pbBody">
         <div id="pg:fm:pb:j_id4">
           <div class="pbSubsection">
-            <div class="form-wrap">
+            <!-- <div class="form-wrap">
               <div class="form-control as_input">
                 <label for="pg:fm:pb:j_id4:j_id5:name"> Nombres</label>
                 <input
@@ -472,7 +472,7 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
             <hr />
             <table
               class="detailList formpp"
