Update header and form styling in p_header.html and forms.css

--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -223,6 +223,12 @@
               ></a>
             </li>
             <li>
+              <a href="/PORTAL/contrasena.html">
+                Cambiar contraseña
+                <i class="fa-solid fa-lock"></i
+              ></a>
+            </li>
+            <li>
               <a href="#"
                 >Cerrar sesión <i class="fa-solid fa-right-from-bracket"></i
               ></a>
