--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -225,14 +225,14 @@
     tbody {
       @apply w-full flex items-start flex-wrap;
       tr {
-        @apply w-full lg:w-1/2 flex flex-wrap px-2 items-center;
+        @apply w-full lg:w-1/2 flex flex-col flex-wrap px-0 items-center;
         &:last-child {
           .multiSelectPicklistTable {
             @apply table;
             tbody {
               @apply table-row-group;
               td:nth-child(1) {
-                @apply w-5/12;
+                @apply w-5/12 px-0;
                 select {
                   @apply select select-bordered w-full !h-full;
                 }
@@ -247,7 +247,7 @@
                 }
               }
               td:nth-child(3) {
-                @apply w-5/12;
+                @apply w-5/12 px-0;
                 select {
                   @apply select select-bordered w-full !h-full;
                 }
@@ -265,10 +265,10 @@
           }
         }
         th {
-          @apply w-full md:w-1/3 px-2 text-left font-normal flex flex-col;
+          @apply w-full md:w-full px-2 text-left font-normal flex flex-col;
         }
         td {
-          @apply w-full md:w-2/3 px-2 text-left flex flex-col mb-4 md:mb-0;
+          @apply w-full md:w-full px-2 text-left flex flex-col mb-4 md:mb-4;
           select {
             @apply select select-bordered w-full;
           }
@@ -324,7 +324,7 @@
     }
     .multiSelectPicklistRow {
       td:nth-child(1) {
-        @apply w-5/12;
+        @apply w-5/12 !px-0;
         select {
           @apply select select-bordered w-full !h-full;
         }
@@ -339,7 +339,7 @@
         }
       }
       td:nth-child(3) {
-        @apply w-5/12;
+        @apply w-5/12 !px-0;
         select {
           @apply select select-bordered w-full !h-full;
         }
