--- a/src/partials/ciber/slide_4.html
+++ b/src/partials/ciber/slide_4.html
@@ -17,7 +17,7 @@
             <h4
               class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-20"
             >
-              Para ingresar a<br class="md:block hidden" />
+              4 Para ingresar a<br class="md:block hidden" />
               la página web de<br class="md:block hidden" />
               ASULADO, digita<br class="md:block hidden" />
               en tu navegador
