--- a/src/partials/ciber/tab_1.html
+++ b/src/partials/ciber/tab_1.html
@@ -159,4 +159,6 @@
   <include src="ciber/slide_2.html"></include>
   <include src="ciber/slide_3.html"></include>
   <include src="ciber/slide_4.html"></include>
+  <include src="ciber/slide_5.html"></include>
+  <include src="ciber/slide_6.html"></include>
 </section>
