--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -29,29 +29,40 @@
             según sea tu caso específico. Esta mesada personal te ofrece
             tranquilidad y libertad.
           </p> -->
-
-          <p class="prop_anim">
-            <b>Conoce las condiciones generales de las Rentas Vitalicias contradas hasta el 17 de abril de 2024</b>
-          </p>
-          <a
-            href="/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf"
-            target="_blank"
-            class="as__button prop_anim"
-          >
-            <span>INGRESA AQUÍ</span>
-            <i role="presentation" class="fa-light fa-arrow-right"></i>
-          </a>
-          <p class="prop_anim">
-            <b>Conoce las condiciones generales de las Rentas Vitalicias contradas a partir del 17 de abril de 2024</b>
-          </p>
-          <a
-            href="/assets/documentos/Condiciones_Generales_Renta_Vitalicia_Inmediata_abril.pdf"
-            target="_blank"
-            class="as__button prop_anim"
-          >
-            <span>INGRESA AQUÍ</span>
-            <i role="presentation" class="fa-light fa-arrow-right"></i>
-          </a>
+          <div class="flex flex-col md:flex-row gap-4 w-full">
+            <div>
+              <p class="prop_anim">
+                <b
+                  >Conoce las condiciones generales de las Rentas Vitalicias
+                  contradas hasta el 17 de abril de 2024</b
+                >
+              </p>
+              <a
+                href="/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf"
+                target="_blank"
+                class="as__button prop_anim !ml-0 !mr-auto w-auto !inline-flex"
+              >
+                <span>INGRESA AQUÍ</span>
+                <i role="presentation" class="fa-light fa-arrow-right"></i>
+              </a>
+            </div>
+            <div>
+              <p class="prop_anim">
+                <b
+                  >Conoce las condiciones generales de las Rentas Vitalicias
+                  contradas a partir del 17 de abril de 2024</b
+                >
+              </p>
+              <a
+                href="/assets/documentos/Condiciones_Generales_Renta_Vitalicia_Inmediata_abril.pdf"
+                target="_blank"
+                class="as__button prop_anim !ml-0 !mr-auto w-auto !inline-flex"
+              >
+                <span>INGRESA AQUÍ</span>
+                <i role="presentation" class="fa-light fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
           <p class="prop_anim">
             *Consulta la
             <a
