--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -29,12 +29,13 @@
             según sea tu caso específico. Esta mesada personal te ofrece
             tranquilidad y libertad.
           </p> -->
+          <p>Conoce las condiciones generales de las Rentas Vitalicias
+            contradas</p>
           <div class="flex flex-col md:flex-row gap-4 w-full">
             <div>
               <p class="prop_anim">
                 <b
-                  >Conoce las condiciones generales de las Rentas Vitalicias
-                  contradas hasta el 17 de abril de 2024</b
+                  >Hasta el 17 de abril de 2024</b
                 >
               </p>
               <a
@@ -49,8 +50,7 @@
             <div>
               <p class="prop_anim">
                 <b
-                  >Conoce las condiciones generales de las Rentas Vitalicias
-                  contradas a partir del 17 de abril de 2024</b
+                  >A partir del 17 de abril de 2024</b
                 >
               </p>
               <a
