--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -34,9 +34,7 @@
           <div class="flex flex-col md:flex-row gap-4 w-full">
             <div>
               <p class="prop_anim">
-                <b
-                  >Hasta el 17 de abril de 2024</b
-                >
+                <b>Hasta</b> el 17 de abril de 2024</b>
               </p>
               <a
                 href="/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf"
@@ -50,8 +48,7 @@
             <div>
               <p class="prop_anim">
                 <b
-                  >A partir del 17 de abril de 2024</b
-                >
+                  >A partir</b> del 17 de abril de 2024
               </p>
               <a
                 href="/assets/documentos/Condiciones_Generales_Renta_Vitalicia_Inmediata_abril.pdf"
