--- a/src/partials/ciber/slide_4.html
+++ b/src/partials/ciber/slide_4.html
@@ -11,61 +11,39 @@
           >
             <img
               class="max-w-sm z-0 col-start-2 col-span-4 row-start-1 row-span-4 self-center w-full mx-auto"
-              src="/assets/images/img_slide_2_ciber.png"
+              src="/assets/images/img_slide_4_ciber.png"
               alt=""
             />
             <h4
-              class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-20"
+              class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-8"
             >
-              4 Para ingresar a<br class="md:block hidden" />
-              la página web de<br class="md:block hidden" />
-              ASULADO, digita<br class="md:block hidden" />
-              en tu navegador
-              <span class="block text-azul-60">www.asulado.com.</span>
+            Descarga aplicaciones<br class="md:block hidden" />
+            <span class="text-azul-60">solo desde las tiendas</span><br class="md:block hidden" />
+            <span class="text-azul-60">oficiales</span> de tu<br class="md:block hidden" />
+            dispositivo (App Store<br class="md:block hidden" />
+            o Play Store) y<br class="md:block hidden" />
+            mantenlas siempre<br class="md:block hidden" />
+            actualizadas. 
+              
             </h4>
             <p
-              class="md:-mt-3 col-start-3 col-span-2 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-4 md:mr-20 px-8 py-5 bg-amarillo-light rounded-lg z-10"
+              class="md:-mt-3 col-start-3 col-span-2 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-4 md:mr-20 px-8 py-5 bg-[#c2e8ef] rounded-lg z-10"
             >
-              Evita hacerlo por medio de links o enlaces enviados que no sean
-              oficiales de ASULADO.
+            En lo posible, instala también sistemas de antivirus.
             </p>
           </div>
         </div>
       </div>
       <div class="slide_int_bg">
-        <svg
-          viewBox="0 0 1920 870"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M334.02 199.56H201.28C201.28 199.56 243.32 82.2097 358.91 164.53C358.91 164.53 431.25 115.77 446.88 182.35"
-            stroke="#07A0BB"
-            stroke-miterlimit="10"
-          />
-          <path
-            d="M494.59 210.65H325.06C325.06 210.65 362.42 149.35 433.65 190.22C433.65 190.22 489.96 148.16 494.59 210.65Z"
-            stroke="#07A0BB"
-            stroke-miterlimit="10"
-          />
-          <path
-            d="M1251.44 776.85C1260.42 764.94 1269.77 753.69 1282.69 744.56C1297.24 734.28 1313.06 726.66 1331.13 726.51C1342.16 726.42 1353.03 729.13 1364.05 729.65C1391.99 730.97 1418.79 718.21 1441.7 702.17C1464.61 686.13 1484.98 666.59 1508.49 651.44C1523.54 641.75 1543.22 633.93 1558.72 642.89C1565.56 646.84 1570.39 653.51 1576.8 658.12C1595.36 671.45 1621.88 664.2 1640.65 651.17C1659.41 638.13 1674.58 619.96 1694.88 609.47C1706.46 603.48 1719.95 600.22 1732.66 603.1C1745.37 605.98 1756.91 615.94 1759.14 628.79C1762.59 648.65 1744.72 665.16 1728.67 677.36C1695.82 702.33 1660.16 728.37 1618.94 730.17C1592.66 731.32 1565.65 722.39 1540.47 729.98C1497.88 742.82 1477.19 797.63 1433.66 806.82C1412.92 811.2 1391.53 803.93 1370.35 804.55C1335.67 805.56 1305.6 827.12 1274.98 843.42C1244.36 859.72 1205.35 870.82 1176.3 851.85C1177 852.3 1183.1 847.84 1183.72 847.45C1204.86 833.89 1222.05 815.38 1237.36 795.66C1242.25 789.36 1246.8 783.03 1251.45 776.87L1251.44 776.85Z"
-            stroke="#07A0BB"
-            stroke-miterlimit="10"
-          />
-          <path
-            d="M1322.54 172.32L1320.46 172.34C1320.36 162.57 1312.33 154.71 1302.56 154.81L1302.54 152.73C1312.31 152.63 1320.17 144.6 1320.07 134.83L1322.15 134.81C1322.25 144.58 1330.28 152.44 1340.05 152.34L1340.07 154.42C1330.3 154.52 1322.44 162.55 1322.54 172.32ZM1308.89 153.7C1314.73 155.61 1319.4 160.18 1321.43 165.98C1323.34 160.14 1327.91 155.47 1333.71 153.44C1327.87 151.53 1323.2 146.96 1321.17 141.15C1319.25 146.99 1314.69 151.66 1308.88 153.69L1308.89 153.7Z"
-            fill="#F6DF6B"
-          />
-          <path
-            d="M707.12 644.63L705.04 644.65C704.94 634.88 696.91 627.02 687.14 627.12L687.12 625.04C696.89 624.94 704.75 616.91 704.65 607.14L706.73 607.12C706.83 616.89 714.86 624.75 724.63 624.65L724.65 626.73C714.88 626.83 707.02 634.86 707.12 644.63ZM693.47 626.01C699.31 627.92 703.98 632.49 706.01 638.29C707.92 632.45 712.49 627.78 718.29 625.75C712.45 623.84 707.78 619.27 705.75 613.46C703.83 619.3 699.27 623.97 693.46 626L693.47 626.01Z"
-            fill="#F6DF6B"
-          />
-          <path
-            d="M1446.46 357.36L1444.38 357.38C1444.28 347.61 1436.25 339.75 1426.48 339.85L1426.46 337.77C1436.23 337.67 1444.09 329.64 1443.99 319.87L1446.07 319.85C1446.17 329.62 1454.2 337.48 1463.97 337.38L1463.99 339.46C1454.22 339.56 1446.36 347.59 1446.46 357.36ZM1432.81 338.74C1438.65 340.65 1443.32 345.22 1445.35 351.02C1447.26 345.18 1451.83 340.51 1457.63 338.48C1451.79 336.57 1447.12 332 1445.09 326.19C1443.17 332.03 1438.61 336.7 1432.8 338.73L1432.81 338.74Z"
-            fill="#F6DF6B"
-          />
-        </svg>
+        <svg viewBox="0 0 2008 830" fill="none" xmlns="http://www.w3.org/2000/svg">
+       
+          <path d="M75.4212 734C84.4012 722.09 93.7512 710.84 106.671 701.71C121.221 691.43 137.041 683.81 155.111 683.66C166.141 683.57 177.011 686.28 188.031 686.8C215.971 688.12 242.771 675.36 265.681 659.32C288.591 643.28 308.961 623.74 332.471 608.59C347.521 598.9 367.201 591.08 382.701 600.04C389.541 603.99 394.371 610.66 400.781 615.27C419.341 628.6 445.861 621.35 464.631 608.32C483.391 595.28 498.561 577.11 518.861 566.62C530.441 560.63 543.931 557.37 556.641 560.25C569.351 563.13 580.891 573.09 583.121 585.94C586.571 605.8 568.701 622.31 552.651 634.51C519.801 659.48 484.141 685.52 442.921 687.32C416.641 688.47 389.631 679.54 364.451 687.13C321.861 699.97 301.171 754.78 257.641 763.97C236.901 768.35 215.511 761.08 194.331 761.7C159.651 762.71 129.581 784.27 98.9613 800.57C68.3412 816.87 29.3312 827.97 0.28125 809C0.98125 809.45 7.08125 804.99 7.70125 804.6C28.8412 791.04 46.0313 772.53 61.3413 752.81C66.2313 746.51 70.7813 740.18 75.4313 734.02L75.4212 734Z" stroke="#07A0BB" stroke-miterlimit="10"/>
+          <path d="M1602.56 53.6595H1433.03C1433.03 53.6595 1470.39 -7.64047 1541.62 33.2295C1541.62 33.2295 1597.93 -8.83047 1602.56 53.6595Z" stroke="#07A0BB" stroke-miterlimit="10"/>
+          <path d="M1462.43 581.51L1460.35 581.53C1460.25 571.76 1452.22 563.9 1442.45 564L1442.43 561.92C1452.2 561.82 1460.06 553.79 1459.96 544.02L1462.04 544C1462.14 553.77 1470.17 561.63 1479.94 561.53L1479.96 563.61C1470.19 563.71 1462.33 571.74 1462.43 581.51ZM1448.79 562.9C1454.63 564.81 1459.3 569.38 1461.33 575.18C1463.24 569.34 1467.81 564.67 1473.61 562.64C1467.77 560.73 1463.1 556.16 1461.07 550.35C1459.15 556.19 1454.59 560.86 1448.78 562.89L1448.79 562.9Z" fill="#08C0FD"/>
+          <path d="M344.43 37.51L342.35 37.53C342.25 27.76 334.22 19.9 324.45 20L324.43 17.92C334.2 17.82 342.06 9.79 341.96 0.02L344.04 0C344.14 9.77 352.17 17.63 361.94 17.53L361.96 19.61C352.19 19.71 344.33 27.74 344.43 37.51ZM330.79 18.9C336.63 20.81 341.3 25.38 343.33 31.18C345.24 25.34 349.81 20.67 355.61 18.64C349.77 16.73 345.1 12.16 343.07 6.35C341.15 12.19 336.59 16.86 330.78 18.89L330.79 18.9Z" fill="#08C0FD"/>
+      
+          </svg>
+          
       </div>
     </div>
   </div>
