--- a/src/partials/ciber/slide_5.html
+++ b/src/partials/ciber/slide_5.html
@@ -1,7 +1,4 @@
-<div
-  id="slide5"
-  class="bg-gradient-to-b from-white to-azul-light carousel-item relative as__section"
->
+<div id="slide5" class="bg-BG-1 carousel-item relative as__section">
   <div class="as__section_wrapper">
     <div class="slide_int">
       <div class="slide_int_content">
@@ -11,61 +8,38 @@
           >
             <img
               class="max-w-sm z-0 col-start-2 col-span-4 row-start-1 row-span-4 self-center w-full mx-auto"
-              src="/assets/images/img_slide_2_ciber.png"
+              src="/assets/images/img_slide_5_ciber.png"
               alt=""
             />
             <h4
-              class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-20"
+              class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-8"
             >
-              5 Para ingresar a<br class="md:block hidden" />
-              la página web de<br class="md:block hidden" />
-              ASULADO, digita<br class="md:block hidden" />
-              en tu navegador
-              <span class="block text-azul-60">www.asulado.com.</span>
+            No compartas <br class="md:block hidden" />
+            <span class="text-white">información personal,</span><br class="md:block hidden" />
+            como tu número de<br class="md:block hidden" />
+            celular o documento<br class="md:block hidden" />
+            de identidad, en tus<br class="md:block hidden" />
+            redes sociales.
             </h4>
             <p
-              class="md:-mt-3 col-start-3 col-span-2 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-4 md:mr-20 px-8 py-5 bg-amarillo-light rounded-lg z-10"
+              class="md:-mt-3 col-start-3 col-span-2 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-0 md:mr-20 px-8 py-5 bg-amarillo-light rounded-lg z-10"
             >
-              Evita hacerlo por medio de links o enlaces enviados que no sean
-              oficiales de ASULADO.
+            Así evitarás exponerte al robo de tu información, suplantación de identidad o venta de datos personales.
             </p>
           </div>
         </div>
       </div>
       <div class="slide_int_bg">
-        <svg
-          viewBox="0 0 1920 870"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M334.02 199.56H201.28C201.28 199.56 243.32 82.2097 358.91 164.53C358.91 164.53 431.25 115.77 446.88 182.35"
-            stroke="#07A0BB"
-            stroke-miterlimit="10"
-          />
-          <path
-            d="M494.59 210.65H325.06C325.06 210.65 362.42 149.35 433.65 190.22C433.65 190.22 489.96 148.16 494.59 210.65Z"
-            stroke="#07A0BB"
-            stroke-miterlimit="10"
-          />
-          <path
-            d="M1251.44 776.85C1260.42 764.94 1269.77 753.69 1282.69 744.56C1297.24 734.28 1313.06 726.66 1331.13 726.51C1342.16 726.42 1353.03 729.13 1364.05 729.65C1391.99 730.97 1418.79 718.21 1441.7 702.17C1464.61 686.13 1484.98 666.59 1508.49 651.44C1523.54 641.75 1543.22 633.93 1558.72 642.89C1565.56 646.84 1570.39 653.51 1576.8 658.12C1595.36 671.45 1621.88 664.2 1640.65 651.17C1659.41 638.13 1674.58 619.96 1694.88 609.47C1706.46 603.48 1719.95 600.22 1732.66 603.1C1745.37 605.98 1756.91 615.94 1759.14 628.79C1762.59 648.65 1744.72 665.16 1728.67 677.36C1695.82 702.33 1660.16 728.37 1618.94 730.17C1592.66 731.32 1565.65 722.39 1540.47 729.98C1497.88 742.82 1477.19 797.63 1433.66 806.82C1412.92 811.2 1391.53 803.93 1370.35 804.55C1335.67 805.56 1305.6 827.12 1274.98 843.42C1244.36 859.72 1205.35 870.82 1176.3 851.85C1177 852.3 1183.1 847.84 1183.72 847.45C1204.86 833.89 1222.05 815.38 1237.36 795.66C1242.25 789.36 1246.8 783.03 1251.45 776.87L1251.44 776.85Z"
-            stroke="#07A0BB"
-            stroke-miterlimit="10"
-          />
-          <path
-            d="M1322.54 172.32L1320.46 172.34C1320.36 162.57 1312.33 154.71 1302.56 154.81L1302.54 152.73C1312.31 152.63 1320.17 144.6 1320.07 134.83L1322.15 134.81C1322.25 144.58 1330.28 152.44 1340.05 152.34L1340.07 154.42C1330.3 154.52 1322.44 162.55 1322.54 172.32ZM1308.89 153.7C1314.73 155.61 1319.4 160.18 1321.43 165.98C1323.34 160.14 1327.91 155.47 1333.71 153.44C1327.87 151.53 1323.2 146.96 1321.17 141.15C1319.25 146.99 1314.69 151.66 1308.88 153.69L1308.89 153.7Z"
-            fill="#F6DF6B"
-          />
-          <path
-            d="M707.12 644.63L705.04 644.65C704.94 634.88 696.91 627.02 687.14 627.12L687.12 625.04C696.89 624.94 704.75 616.91 704.65 607.14L706.73 607.12C706.83 616.89 714.86 624.75 724.63 624.65L724.65 626.73C714.88 626.83 707.02 634.86 707.12 644.63ZM693.47 626.01C699.31 627.92 703.98 632.49 706.01 638.29C707.92 632.45 712.49 627.78 718.29 625.75C712.45 623.84 707.78 619.27 705.75 613.46C703.83 619.3 699.27 623.97 693.46 626L693.47 626.01Z"
-            fill="#F6DF6B"
-          />
-          <path
-            d="M1446.46 357.36L1444.38 357.38C1444.28 347.61 1436.25 339.75 1426.48 339.85L1426.46 337.77C1436.23 337.67 1444.09 329.64 1443.99 319.87L1446.07 319.85C1446.17 329.62 1454.2 337.48 1463.97 337.38L1463.99 339.46C1454.22 339.56 1446.36 347.59 1446.46 357.36ZM1432.81 338.74C1438.65 340.65 1443.32 345.22 1445.35 351.02C1447.26 345.18 1451.83 340.51 1457.63 338.48C1451.79 336.57 1447.12 332 1445.09 326.19C1443.17 332.03 1438.61 336.7 1432.8 338.73L1432.81 338.74Z"
-            fill="#F6DF6B"
-          />
-        </svg>
+        <svg viewBox="0 0 2008 830" fill="none" xmlns="http://www.w3.org/2000/svg">
+         
+          <path d="M109.051 317.141H91.9414V334.251H109.051V317.141Z" stroke="#F1F8FD" stroke-miterlimit="10"/>
+          <path d="M1333.61 37.51L1331.53 37.53C1331.43 27.76 1323.4 19.9 1313.63 20L1313.61 17.92C1323.38 17.82 1331.24 9.79 1331.14 0.02L1333.22 0C1333.32 9.77 1341.35 17.63 1351.12 17.53L1351.14 19.61C1341.37 19.71 1333.51 27.74 1333.61 37.51ZM1319.96 18.9C1325.8 20.81 1330.47 25.38 1332.5 31.18C1334.41 25.34 1338.98 20.67 1344.78 18.64C1338.94 16.73 1334.27 12.16 1332.24 6.35C1330.32 12.19 1325.76 16.86 1319.95 18.89L1319.96 18.9Z" fill="#F6DF6B"/>
+          <path d="M215.609 559.51L213.529 559.53C213.429 549.76 205.399 541.9 195.629 542L195.609 539.92C205.379 539.82 213.239 531.79 213.139 522.02L215.219 522C215.319 531.77 223.349 539.63 233.119 539.53L233.139 541.61C223.369 541.71 215.509 549.74 215.609 559.51ZM201.959 540.9C207.799 542.81 212.469 547.38 214.499 553.18C216.409 547.34 220.979 542.67 226.779 540.64C220.939 538.73 216.269 534.16 214.239 528.35C212.319 534.19 207.759 538.86 201.949 540.89L201.959 540.9Z" fill="#F6DF6B"/>
+          <path d="M1465.33 483.661H1266.71C1266.71 483.661 1300.36 389.721 1392.89 455.621C1392.89 455.621 1459.91 410.451 1465.33 483.661Z" stroke="white" stroke-miterlimit="10"/>
+          <path d="M199.331 104.661H0.710938C0.710938 104.661 34.3609 10.7209 126.891 76.6109C126.891 76.6109 193.911 31.4409 199.331 104.651V104.661Z" stroke="white" stroke-miterlimit="10"/>
+        
+          </svg>
+          
       </div>
     </div>
   </div>
