--- a/src/partials/ciber/slide_6.html
+++ b/src/partials/ciber/slide_6.html
@@ -11,24 +11,21 @@
           >
             <img
               class="max-w-sm z-0 col-start-2 col-span-4 row-start-1 row-span-4 self-center w-full mx-auto"
-              src="/assets/images/img_slide_2_ciber.png"
+              src="/assets/images/img_slide_6_ciber.png"
               alt=""
             />
             <h4
-              class="-mt-10 z-20 text-3xl md:text-4xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-20"
+              class="-mt-10 z-20 text-3xl md:text-3xl text-azul-norm font-je font-semibold col-start-1 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:ml-10"
             >
-              6 Para ingresar a<br class="md:block hidden" />
-              la página web de<br class="md:block hidden" />
-              ASULADO, digita<br class="md:block hidden" />
-              en tu navegador
-              <span class="block text-azul-60">www.asulado.com.</span>
+            <span class="inline-block rounded-full bg-amarillo-light px-3 py-1 font-thin text-2xl ml-[-40px]">Ten en cuenta:</span><br class="md:block hidden" />
+            ASULADO<br class="md:block hidden" />
+            nunca te solicitará<br class="md:block hidden" />
+            por correo electrónico<br class="md:block hidden" />
+            información confidencial<br class="md:block hidden" />
+            o financiera, como claves<br class="md:block hidden" />
+            o códigos de seguridad.
             </h4>
-            <p
-              class="md:-mt-3 col-start-3 col-span-2 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-4 md:mr-20 px-8 py-5 bg-amarillo-light rounded-lg z-10"
-            >
-              Evita hacerlo por medio de links o enlaces enviados que no sean
-              oficiales de ASULADO.
-            </p>
+           
           </div>
         </div>
       </div>
