--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -30,7 +30,7 @@
             tranquilidad y libertad.
           </p> -->
           <p>Conoce las condiciones generales de las Rentas Vitalicias
-            contradas</p>
+            contratadas</p>
           <div class="flex flex-col md:flex-row gap-4 w-full">
             <div>
               <p class="prop_anim">
